DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2006-12-13 patrick  Replaced integer return codes in vpr::Thread with
                    exceptions.
                    NEW VERSION: 1.1.38
2006-12-11 patrick  Replaced integer return codes in vpr::ThreadKey with
                    exceptions.
                    NEW VERSION: 1.1.37
2006-12-08 patrick  Added Windows-specific threading wrappers and
                    synchronization primitives for use instead of NSPR's
                    equivalent types and functions.
                    NEW VERSION: 1.1.36
2006-10-01 patrick  Changed vpr::System::getenv() and vpr::System::setenv() to
                    return bool instead of vpr::ReturnStatus.
                    NEW VERSION: 1.1.35
2006-10-01 patrick  Removed the use of vpr::ReturnStatus in vpr::Signal.
                    NEW VERSION: 1.1.34
2006-10-01 patrick  Removed the use of vpr::ReturnStatus in vpr::RWMutex.
                    NEW VERSION: 1.1.33
2006-10-01 patrick  Introduced vpr::DeadlockException and put it to use in
                    vpr::Mutex and vpr::Semaphore.
                    NEW VERSION: 1.1.32
2006-10-01 patrick  Removed the use of vpr::ReturnStatus in vpr::Thread.
                    Note that the spawning form of the vpr::Thread constructor
                    now throws an exception if the thread does not start.
                    NEW VERSION: 1.1.31
2006-09-30 patrick  Removed the use of vpr::ReturnStatus in vpr::Semaphore.
                    NEW VERSION: 1.1.30
2006-09-30 patrick  Removed the use of vpr::ReturnStatus in vpr::CondVar.
                    NEW VERSION: 1.1.29
2006-09-30 patrick  Removed the use of vpr::ReturnStatus in vpr::Mutex.
                    Introduced new exception types vpr::ResourceException and
                    vpr::LockException.
                    NEW VERSION: 1.1.28