@@ -1,3 +1,4 @@
+1.1.39-0 @01/30/2007 22:30:00 UTC@
 1.1.38-0 @12/13/2006 16:50:00 UTC@
 1.1.37-0 @12/11/2006 15:50:00 UTC@
 1.1.36-0 @12/08/2006 20:45:00 UTC@
