@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2007-01-30 patrick  Eliminated the need to set VPR_BASE_DIR on Windows to run
+                    applications.
+                    NEW VERSION: 1.1.39
 2006-12-13 patrick  Replaced integer return codes in vpr::Thread with
                     exceptions.
                     NEW VERSION: 1.1.38
